# sata

./: README.md
Datasets/Literature_statistics/: Scopus-10-Analyze-Year.csv  Scopus-3756-Analyze-Year.csv  analyze.csv  export2024.07.13-07.19.37.csv
Datasets/SAA/: BenchResultsDMAREDGAR.csv  BenchResultsDMARWC.csv  BenchResultsHPA75EDGARcat.csv  BenchResultsHPA75WC.csv  BenchResultsSAAx10x60x55x27RPSx0.4RT_CPU75_iteratorEDGAR_cat.csv  Combined - EDGAR.csv  (+10 more)
HPA/: hpa copy.yml
Infra scripts/: base-bt-test.sh  base-bt-test2.sh  base-bt.sh  base-threats-test.sh  install-base.sh  install-short.sh  install-thresholds.sh  install.sh  portforward.sh  promtail-values.yaml  recreateVolumes.sh  uninstall-hpa.sh  uninstall.sh
Prometheus/: extraScrapeConfigs.yml  prometheus.sh  values-prod.yaml  values.save3  values.yaml
autoscaler/: .gitignore  apps.sh  win-apps.sh
autoscaler-dmar/: apps.sh  buildpush.sh
autoscaler-hpa/: .win-apps.sh.swp  apps.sh  buildpush.sh  pom.xml
autoscaler-saa/: apps.sh
cat_noir/: Cargo.toml  Dockerfile  README.md  apps.sh  removeApps.sh
cat_noir/kube/: deployment.yml  extraScrapeConfigs.yml  pod.yml  service-monitor.yml
cat_noir/src/: main.rs
custom-pod-autoscaler/: config.yaml  cpa.sh  cpa.yaml  deployment.yaml
demo1/: apps12k-8k.sh  apps16k-8k.sh  apps8k-4k.sh  pod.sh  pom.xml  removePod.sh
gatling-charts-highcharts-bundle-3.9.0/: logparcer.py  raw_statistics.csv
grafana/: grafana.sh  removeGrafana.sh  values.yaml
ita_public_tools/: skript.py  test.txt  wc_d78_15_22.csv
prod/: azuredisk-sc.yaml  azurefile-sc.yml  lb.yml
(+186 files in other folders)
