[package]
name = "cat_noir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
prometheus = { version = "0.9", features = ["process"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.4.0"
rand = { version = "0.8.5" }
